2016-08-26  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [XCC_GCC]: treat gcc 5 & 6 like 3 & 4
	Fixes bug#686

2016-08-14  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (hardlink_file_o): add
	(copy_one_file): fix GC-safety bugs

2016-08-12  Sam Steingold  <sds@gnu.org>

	* modules/pcre/cpcre.c (PCRE:PCRE-EXEC): fix a GC-safety bug

2016-08-12  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (copy_one_file): fix STACK depth handling

2016-08-11  Sam Steingold  <sds@gnu.org>

	* pathname.d (delete_directory): fix rmdir() failure handling

2016-08-11  Sam Steingold  <sds@gnu.org>

	* package.d (intern): cerror_package_locked can trigger GC

2016-08-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (make_modules): create separate targets for base and
	full modules because the former are compiled using the boot
	linking set, while the latter (e.g., asdf) require the base linking set

2016-08-11  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp: avoid
	error: "Never use <bits/ipctypes.h> directly; include <sys/ipc.h> instead."
	by including <sys/ipc.h> instead of <bits/ipctypes.h>

2016-06-09  Daniel Jour  <daniel.oertwig@gmail.com>

	Disable TRIVIALMAP_MEMORY and SINGLEMAP_MEMORY on NetBSD due to
	mmap and MAP_FIXED issues
	* lispbibl.d (TRIVIALMAP_MEMORY, SINGLEMAP_MEMORY) [UNIX_NETBSD]:
	disable

2016-05-16  Daniel Jour  <daniel.oertwig@gmail.com>

	Update asdf to version 3.1.7
	* modules/asdf/asdf.lisp: Update to asdf 3.1.7
	* modules/asdf/asdf.xml: Update asdf module description

2016-05-01  Daniel Jour  <daniel.oertwig@gmail.com>

	* lispbibl.d (VALUE1_EXTRA) [!value1_register]: do not define
	This fixes patch#93dee6a014b2 (2008-01-13) as discussed in
	https://sourceforge.net/p/clisp/mailman/message/35061096/

2015-03-18  Ken Brown  <kbrown@cornell.edu>

	Fix dynamic loading on Cygwin (patch#44)
	* src/genclisph.d [UNIX_CYGWIN32]: Fix syntax error in lisp.def